Fixes whitespace issue on Safari browser.

--- a/public/style.css
+++ b/public/style.css
@@ -11,15 +11,22 @@ html, body{
     margin: 0px;
     padding: 0px;
   }
+    
 
 body {
   font-family: 'Montserrat', sans-serif;
   position: relative;
   height: 100%;
   min-width: 100%;
-  overflow-x: hidden;
 }
-
+  
+.wrapper{
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
+}
+  
 a, a:visited{
   text-decoration: none;
   color: #4ee7bb;
